# iroha-2-examples

./: MAINTAINERS.md  README.md
.github/: settings.yml
JavaScript/: package.json  pnpm-lock.yaml
JavaScript/examples/: mst.ts
Rust/: Cargo.toml  README.md  docker-compose.yml
Rust/configs/: alice_chess.toml  alice_wonderland.toml  bob_chess.toml  bob_wonderland.toml
Rust/configs/demo/: config.json  genesis.json
Rust/examples/: account_register.rs  account_unregister.rs  asset_definition_register.rs  asset_definition_unregister.rs  asset_numeric.rs  asset_store.rs  block_stream.rs  client_account_definition.rs  client_account_registration.rs  client_asset_burning.rs  client_asset_minting.rs  client_asset_registration.rs  client_domain_registration.rs  client_json_config.rs  domain_register.rs  domain_transfer.rs  domain_unregister.rs  experimenting-with-transfer.rs  metadata.rs  million_accounts_genesis.rs  mst.rs  roles.rs  status.rs  transaction.rs  trigger_call.rs  trigger_data.rs  trigger_pre_commit.rs  trigger_time.rs  tutorial-3-register-domain.rs  tutorial-4-register-account.rs  tutorial-5-register-mint-burn-asset.rs
Rust/src/: lib.rs
examples/iroha_client_cli/: README.md
examples/iroha_client_cli/cli/: tutorial-3-register-domain.result.json  tutorial-3-register-domain.sh  tutorial-4-register-account.result.json  tutorial-4-register-account.sh  tutorial-5-asset.output-burn.json  tutorial-5-asset.output-mint.json  tutorial-5-asset.sh
examples/iroha_client_cli/json/: tutorial-3-register-domain.isi.json5  tutorial-4-register-accout.isi.json5  tutorial-5-asset.1-register.isi.json5  tutorial-5-asset.2-mint.isi.json5  tutorial-5-asset.3-burn.isi.json5
examples/rust/: README.md
examples/rust/examples/: client_account_definition.rs  client_asset_burning.rs  client_domain_registration.rs  client_json_config.rs  tutorial-3-register-domain.rs  tutorial-5-register-mint-burn-asset.rs
