[package]
name = "iroha_examples"
version = "0.1.0"
edition = "2021"

authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
description = "Hyperledger Iroha 2 code examples"
repository = "https://github.com/hyperledger/iroha-2-examples"
documentation = "https://hyperledger.github.io/iroha-2-docs"
homepage = "https://iroha.tech"

license = "Apache-2.0"
keywords = ["blockchain", "crypto", "iroha", "ledger"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
iroha = { git = "https://github.com/hyperledger/iroha.git" }
eyre = "0.6.12"
serde_json = "1.0.117"
